# api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
config/: settings_dev.yml
entity/: Cargo.toml
entity/src/: cluster.rs  microdevice.rs  mod.rs  prelude.rs  telemetry_record.rs  user.rs  user_cluster.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240825_042151_create_clusters_table.rs  m20240825_043411_create_microdevices_table.rs  m20240831_050316_user_table.rs  m20240831_050622_user_cluster_table.rs  m20240831_090007_seed_user_table.rs  m20240910_224132_add_topics_to_microdevices.rs  m20241007_224722_seed_tables.rs  m20241009_032952_make_description_nullable.rs  m20241116_234725_create_telemetry_table.rs
src/: config.rs  main.rs
src/auth/: error.rs  mod.rs
src/context/: mod.rs
src/events/: mod.rs
src/model/: cluster.rs  common.rs  error.rs  microdevice.rs  mod.rs
src/model/ampq/: error.rs  mod.rs
src/model/msg_broker/: mod.rs
src/web/: cluster.rs  error.rs  guard.rs  login.rs  microdevice.rs  mod.rs  session.rs
src/web/rpc/: error.rs  mod.rs
src/web/rpc/actions/: mod.rs
