[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = {version = "^1.0.208", features = ["derive"]}
tokio = {version = "^1.39.3", features = ["full"]}
sea-orm = { version = "^1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tower = "0.5.0"
toml = "0.8.19"
config = "0.14.0"