[package]
name = "api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.7.5"
serde = { version = "^1.0.208", features = ["derive"] }
tokio = { version = "^1.39.3", features = ["full"] }
sea-orm = { version = "^1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tower = "0.5.0"
toml = "0.8.19"
config = "0.14.0"
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.127"
utoipa = { version = "4", features = ["yaml", "axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
tower-service = "0.3.2"
tower-http = { version = "0.5.2", features = ["cors"] }
once_cell = "1.19.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
cookie = "0.18"
futures = {version = "0.3.30"}